--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -330,6 +330,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        
+        
     </common:LayoutAwarePage.Resources>
 
     <!--
@@ -338,10 +340,11 @@
         * Row 1 contains the rest of the page layout
     -->
     <Page.BottomAppBar>
-        <AppBar Name="botomAppbar"  >
+        <AppBar>
             <StackPanel Orientation="Horizontal">
-                <Button Name="btnDelete"  Style="{StaticResource RemoveAppBarButtonStyle}" Command="{Binding StergeCommand}" ></Button>
-                <Button Name="btnEdit" Visibility="{Binding ShowEdit, Converter={StaticResource booleanToVisibilityConverter}, Mode=TwoWay}"   Style="{StaticResource EditAppBarButtonStyle}" Command="{Binding EditeazaCommand}" ></Button>
+                <Button Style="{StaticResource RemoveAppBarButtonStyle}" Command="{Binding StergeCommand}" ></Button>
+                <Button
+                    Visibility="{Binding ShowEdit, Converter={StaticResource booleanToVisibilityConverter}, Mode=TwoWay}"   Style="{StaticResource EditAppBarButtonStyle}" Command="{Binding EditeazaCommand}" ></Button>
             </StackPanel>
         </AppBar>
     </Page.BottomAppBar>
@@ -372,19 +375,28 @@
                 <!-- The back button and title have different styles when snapped -->
                 <VisualState x:Name="Snapped">
                     <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedBackButtonStyle}"/>
+                       <ObjectAnimationUsingKeyFrames Storyboard.TargetName="GridNavigator" Storyboard.TargetProperty="Visibility">
+                           <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"></DiscreteObjectKeyFrame>
+                       </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="GridContent" Storyboard.TargetProperty="Visibility">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"></DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="StackPanelSnappedView" Storyboard.TargetProperty="Visibility">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"></DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
+        <!--Aici am pentru snapped view cum e la store logo aplicatiei si numele ei -->
+        <StackPanel Grid.Row="2" Name="StackPanelSnappedView" Visibility="Collapsed">
+            <Image Source="/Assets/Logo.png" MaxWidth="150" MaxHeight="150"></Image>
+            <TextBlock Text="{StaticResource AppName}" Style="{StaticResource  SnappedPageHeaderTextStyle}" TextAlignment="Center"></TextBlock>
+        </StackPanel>
+        
         <!-- Back button and page title -->
-        <Grid>
+        <Grid Name="GridNavigator">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -392,7 +404,7 @@
             <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Grid.Column="1" Text="{StaticResource AppName}" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
-        <Grid Grid.Row="1" Grid.RowSpan="2">
+        <Grid Name="GridContent" Grid.Row="1" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
 
                 <ColumnDefinition Width="*"/>
