Adaugat converter pentru listview count atat cand are si cand n-are, si tratat cazul cu butonul de adaugare.

--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -417,8 +417,11 @@
                             <TextBlock Text="Utilitati" Padding="30" FontSize="20"/>
                             <Button x:Name="btnAdd" Style="{StaticResource AddAppBarButtonStyle}" Command="{Binding AddUtilitateCommand}" />
                         </StackPanel>
-                        <ListView x:Name="itemListUtilitati" ItemsSource="{Binding ListaUtilitati}" Background="DarkBlue" IsItemClickEnabled="True" 
-                                SelectedItem="{Binding UtilitateSelectata, Mode=TwoWay}"
+                        <ListView x:Name="itemListUtilitati" 
+                                  ItemsSource="{Binding ListaUtilitati}" 
+                                  Background="DarkBlue" IsItemClickEnabled="True" 
+                                  Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+                                  SelectedItem="{Binding UtilitateSelectata, Mode=TwoWay}"
                                   common:ListViewClickCommand.Command="{Binding CmdListView}"
                                   >
                             <ListView.ItemTemplate>
@@ -437,13 +440,18 @@
                     <StackPanel Orientation="Vertical" >
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Consum" Padding="30" FontSize="20"/>
-                            <Button x:Name="btnAddConsum" Style="{StaticResource AddAppBarButtonStyle}" Command="{Binding AddConsumCommand}" />
+                            <Button x:Name="btnAddConsum" Style="{StaticResource AddAppBarButtonStyle}" Command="{Binding AddConsumCommand}" 
+                                    Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+                                    />
                         </StackPanel>
                         <Chart:Chart x:Name="LineChart"
                                  HorizontalAlignment="Center" VerticalAlignment="Top" Background="Crimson" Height="500" Width="800"
                                     
                                      >
-                            <Chart:LineSeries x:Name="lineSerii" DependentValuePath="ValoareConsum" IndependentValuePath="DataConsumGrafic" ItemsSource="{Binding ConsumUtilitates, Mode=TwoWay}" IsSelectionEnabled="True" SelectedItem="{Binding ConsumSelect, Mode=TwoWay}" Title="{Binding LegendaUtilitateGrafic, Mode=TwoWay}"/>
+                            <Chart:LineSeries x:Name="lineSerii" DependentValuePath="ValoareConsum" IndependentValuePath="DataConsumGrafic"
+                                              ItemsSource="{Binding ConsumUtilitates, Mode=TwoWay}"
+                                               Visibility="{Binding ConsumUtilitates.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+                                              IsSelectionEnabled="True" SelectedItem="{Binding ConsumSelect, Mode=TwoWay}" Title="{Binding LegendaUtilitateGrafic, Mode=TwoWay}"/>
                         </Chart:Chart>
                     </StackPanel>
                 </GridViewItem>
@@ -451,9 +459,16 @@
                     <StackPanel Orientation="Vertical" >
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Alerte" Padding="30" FontSize="20"/>
-                            <Button x:Name="btnAddAlerta" Style="{StaticResource AddAppBarButtonStyle}" Command="{Binding AdaugaAlertaCommand}"/>
+                            <Button x:Name="btnAddAlerta"
+                                    Style="{StaticResource AddAppBarButtonStyle}" 
+                                    Command="{Binding AdaugaAlertaCommand}"
+                                     Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+                                    />
                         </StackPanel>
-                        <ListView x:Name="itemListAlerte" ItemsSource="{Binding AlerteUtilitati}"  SelectedItem="{Binding AlertaSelectata, Mode=TwoWay}" Background="DarkBlue"
+                        <ListView x:Name="itemListAlerte" ItemsSource="{Binding AlerteUtilitati}"  
+                                  SelectedItem="{Binding AlertaSelectata, Mode=TwoWay}"
+                                  Background="DarkBlue"
+                                  Visibility="{Binding AlerteUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                                   IsItemClickEnabled="True"
                                   common:ListViewClickCommand.Command="{Binding EditeazaAlertaCommand}"
                                   >
