--- a/HomeHelper/App.xaml
+++ b/HomeHelper/App.xaml
@@ -7,6 +7,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <mvvm:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter"></mvvm:BooleanToVisibilityConverter>
+            <mvvm:ItemCountToEmptyVisibilityConverterButtonsAdd x:Key="ItemCountToEmptyVisibilityConverter"></mvvm:ItemCountToEmptyVisibilityConverterButtonsAdd>
+            <mvvm:ItemCountToEmptyVisibilityConverter x:Key="ItemCountToEmptyShow"></mvvm:ItemCountToEmptyVisibilityConverter>
             <ResourceDictionary.MergedDictionaries>
 
                 <!-- 
