--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -500,7 +500,8 @@
                                 <DataTemplate>
                                     <StackPanel Orientation="Vertical">
                                         <TextBlock Text="{Binding NumeUtilitate}"/>
-                                        <TextBlock Text="{Binding DataAfisareAlerta}"/>
+                                        <TextBlock Text="{Binding DataAlerta}"/>
+                                        <TextBlock Text="{Binding AlertaActiva,  Converter={StaticResource BooleanToActiv}}"></TextBlock>
                                     </StackPanel>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
