Stabilirea unor noi culori de fundal.

--- a/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/AlertaUtilitateUserControl.xaml
@@ -16,7 +16,7 @@
         
         
     </UserControl.Resources>
-    <Grid Background="Black">
+    <Grid Background="#FF2B1926">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="120"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
