--- a/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditConsumUtilitateUserControl.xaml
@@ -13,8 +13,8 @@
          Height="400"
     Width="400"     
              >
-    
-    <Grid Background="Black">
+
+    <Grid Background="#FF2B1926">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="120"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
