--- a/HomeHelper/Controls/EditUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditUtilitateUserControl.xaml
@@ -12,7 +12,7 @@
     Height="400"
     Width="400"
     >
-        <Grid Background="Black">
+    <Grid Background="#FF2B1926">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="130"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
