--- a/HomeHelper/MainPage.xaml
+++ b/HomeHelper/MainPage.xaml
@@ -2,10 +2,14 @@
     x:Name="pageRoot"
     x:Class="HomeHelper.MainPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
+  
+  
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:HomeHelper"
+    xmlns:vm="using:HomeHelper.ViewModel"
     xmlns:common="using:HomeHelper.Common"
+    d:DataContext="{Binding Source={d:DesignInstance Type=vm:MainViewModel, IsDesignTimeCreatable=True, CreateList=True}}"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Chart="using:WinRTXamlToolkit.Controls.DataVisualization.Charting" xmlns:Syncfusion="using:Syncfusion.UI.Xaml.Charts"
@@ -339,6 +343,7 @@
         * Row 0 contains the back button and page title
         * Row 1 contains the rest of the page layout
     -->
+    
     <Page.BottomAppBar>
         <AppBar>
             <StackPanel Orientation="Horizontal">
@@ -348,8 +353,15 @@
             </StackPanel>
         </AppBar>
     </Page.BottomAppBar>
-
-    <Grid Style="{StaticResource LayoutRootStyle}" Background="#464646">
+    
+    
+    <Grid Style="{StaticResource LayoutRootStyle}" AllowDrop="True">
+    	<Grid.Background>
+    		<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+    			<GradientStop Color="Black" Offset="0.933"/>
+    			<GradientStop Color="#FF78956B" Offset="0.084"/>
+    		</LinearGradientBrush>
+    	</Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
             <RowDefinition Height="3*"/>
@@ -423,11 +435,12 @@
                             Style="{StaticResource GroupHeaderTextStyle}" Padding="20,0,0,0"
                             ></TextBlock>
                         <ListView x:Name="itemListUtilitati" 
+                                  
                                   ItemsSource="{Binding ListaUtilitati}" 
-                                  Background="DarkBlue" IsItemClickEnabled="True" 
+                                  Background="#FF2B1926" IsItemClickEnabled="True" 
                                   Visibility="{Binding ListaUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                                   SelectedItem="{Binding UtilitateSelectata, Mode=TwoWay}"
-                                  common:ListViewClickCommand.Command="{Binding CmdListView}"
+                                  common:ListViewClickCommand.Command="{Binding CmdListView}" AllowDrop="False"
                                   >
                             <ListView.ItemTemplate>
                                 <DataTemplate>
@@ -463,9 +476,8 @@
                             Style="{StaticResource GroupHeaderTextStyle}" Padding="20,0,0,0"
                             ></TextBlock>
                         <Chart:Chart x:Name="LineChart"
-                                 HorizontalAlignment="Center" VerticalAlignment="Top"
-                                     Background="Crimson" Height="500" Width="800"
-                                  Visibility="{Binding ConsumUtilitates.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
+                                 HorizontalAlignment="Center" VerticalAlignment="Top" Height="500" Width="800"
+                                  Visibility="{Binding ConsumUtilitates.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}" Background="#FF743E44"
                                      >
                             <Chart:LineSeries x:Name="lineSerii" DependentValuePath="Consum" IndependentValuePath="DataConsumGrafic"
                                               ItemsSource="{Binding ConsumUtilitates, Mode=TwoWay}"
@@ -491,7 +503,7 @@
                             ></TextBlock>
                         <ListView x:Name="itemListAlerte" ItemsSource="{Binding AlerteUtilitati}"  
                                   SelectedItem="{Binding AlertaSelectata, Mode=TwoWay}"
-                                  Background="DarkBlue"
+                                  Background="#FF2B1926"
                                   Visibility="{Binding AlerteUtilitati.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                                   IsItemClickEnabled="True"
                                   common:ListViewClickCommand.Command="{Binding EditeazaAlertaCommand}"
